# Otus_cours

./: .gitignore  .travis.yml  CMakeLists.txt  Gtest_version.cpp  main.cpp  test_version_GT.cpp
source/: .travis.yml
